--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -1,75 +1,69 @@
 .footer-nav {
-  width: 100%;
-  /*
   display: flex;
   justify-content: flex-start;
-  align-items: center;*/
+  align-items: center;
   max-width: 920px;
-  //margin-left: 41px;
-  margin-right: 41px;
 
   @include vp-767 {
     align-items: flex-end;
     margin-top: -20px;
-    margin-bottom: 33px;
+    margin-bottom: 20px;
     margin-left: 0;
   }
 }
 
 .footer-nav__list {
-  /*
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  align-self: flex-start;*/
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  align-self: flex-start;
   width: 100%;
   margin: 0;
-  //margin-right: 40px;
   padding: 0;
 
   list-style: none;
 
-  gap: 40px;
-  grid-template-columns: repeat(auto-fit, minmax(38px, min-content));
-  @include vp-1199 {
-    //margin-right: 30px;
-  }
   @include vp-767 {
-    flex-direction: column;
-    align-items: flex-start;
+    display: grid;
+    align-items: start;
     margin-right: 0;
-  }
 
-  &--right {
-    @include vp-767 {
-      align-self: flex-start;
-      //margin-right: 75px;
-      padding-top: 42px;
-    }
-  }
-
-  &--left {
-    @include vp-1199 {
-      margin-right: 10px;
-    }
-    @include vp-767 {
-      align-self: flex-start;
-    }
+    gap: 0 75px;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 .footer-nav__item {
-  //margin-right: 40px;
+  padding: 0 20px;
+
   @include vp-1199 {
-    //margin-right: 30px;
+    padding: 0 15px;
   }
   @include vp-767 {
     margin-right: 0;
-    //margin-bottom: 16px;
+    padding: 0;
+    padding-bottom: 15px;
+  }
+}
+
+.footer-nav__item:first-child {
+  @include vp-767 {
+    align-self: end;
+
+    grid-row: span 2;
+  }
+}
+
+.footer-nav__item:nth-child(2) {
+  @include vp-767 {
+    order: 1;
+  }
+}
+
+.footer-nav__item:nth-child(5) {
+  @include vp-767 {
+    order: 2;
   }
 }
 
