--- a/source/sass/global/footer.scss
+++ b/source/sass/global/footer.scss
@@ -40,45 +40,37 @@
 .footer__social {
   flex-shrink: 0;
   align-self: flex-start;
-  width: 122px;
+  width: 110px;
 
   @include vp-767 {
-    width: 170px;
+    width: 148px;
   }
 }
 
 .footer__social ul {
-  /*
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;*/
   display: grid;
-  align-items: center;
+  justify-content: end;
   margin: 0;
   padding: 0;
 
   list-style: none;
 
-  gap: 25px;
+  gap: 19px;
   grid-template-columns: repeat(auto-fit, 24px);
   @include vp-1199 {
-    gap: 20px;
+    gap: 19px;
   }
   @include vp-767 {
-    gap: 35px;
+    gap: 26px;
     grid-template-columns: repeat(auto-fit, 32px);
   }
 }
 
 .footer__social li {
-  //margin-right: 25px;
-  @include vp-1199 {
-    //margin-right: 20px;
-  }
-  @include vp-767 {
-    //margin-right: 35px;
-  }
+  align-self: center;
+
+  justify-self: end;
+
   & a {
     width: 100%;
   }
